--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -20,14 +20,17 @@
         </div>
         <div class="row mt-3">
             <div class="col">
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Enter issue number or ID" id="issue">
-                    <button class="btn btn-primary" type="button" id="goButton">Go</button>
-                </div>
+                <form>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Enter issue number or ID" id="issue"
+                            autofocus>
+                        <button class="btn btn-primary" type="submit" id="goButton">Go</button>
+                    </div>
+                </form>
             </div>
         </div>
-        <div class="row">
-            <button id="go-to-options">Go to options</button>
+        <div class="row mt-2 info-link">
+            <a><span id="go-to-options">Go to options</span></a>
         </div>
     </div>
 
