WIP - added api call to jira - tries to create a link

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -32,6 +32,10 @@
         <div class="row mt-2 info-link">
             <a><span id="go-to-options">Go to options</span></a>
         </div>
+        <div class="row mt-2">
+            <a href="http://tbener.com" id="bla">hello</a>
+            <button type="button" class="btn btn-secondary" id="test">Clickkkk</button>
+        </div>
     </div>
 
     <script src="popup.js"></script>
