- change files structure - copy link works with simple Copy

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -30,11 +30,7 @@
             </div>
         </div>
         <div class="row mt-2 info-link">
-            <a><span id="go-to-options">Go to options</span></a>
-        </div>
-        <div class="row mt-2">
-            <a href="http://tbener.com" id="bla">hello</a>
-            <button type="button" class="btn btn-secondary" id="test">Clickkkk</button>
+            <a><span id="go-to-options">Options</span></a>
         </div>
     </div>
 
