- update zip - update manifest version to 1.0.2 - add Feature list to options.html

--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -37,6 +37,14 @@
             <button type="button" id="saveButton" class="btn btn-primary col-auto">Save</button>
             <div class="form-text text-muted col-auto" id="status"></div>
         </div>
+
+        <hr class="mb-5 mt-5"/>
+        <h3 class="mb-3">Features</h3>
+        <ul>
+            <li>Copy issue key as link + summary</li>
+            <li>Popup for quick navigation</li>
+            <li>Freeze issue summary</li>
+        </ul>
     </div>
 
     <!-- Your custom script -->
