--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -48,6 +48,7 @@
     </div>
 
     <!-- Your custom script -->
+    <script src="/common/settings.js"></script>
     <script src="options.js"></script>
 </body>
 
