- add version to options page - minor css fixes

--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -45,6 +45,8 @@
             <li>Popup for quick navigation</li>
             <li>Freeze issue summary</li>
         </ul>
+
+        <div class="mt-5 text-secondary" id="version"></div>
     </div>
 
     <!-- Your custom script -->
