--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -31,9 +31,9 @@
             </div>
         </div>
         <hr>
-        <footer>
+        <footer class="text-secondary">
             <span class="info-link" id="go-to-options">Options</span>
-            <small class="version" id="version"></small>
+            <small class="float-end" id="version"></small>
         </footer>
     </div>
 
