- add listener to typing to display preview

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -29,6 +29,9 @@
                     <div class="text-muted hint">
                         Ctrl+Enter to open on active tab
                     </div>
+                    <div id="preview">
+
+                    </div>
                 </form>
             </div>
         </div>
