--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -38,7 +38,10 @@
             <div class="form-text text-muted col-auto" id="status"></div>
         </div>
 
-        <hr class="mb-5 mt-5"/>
+        <div class="mt-5 text-secondary" id="version"></div>
+
+        <hr class="mb-5"/>
+
         <h3 class="mb-3">Features</h3>
         <ul>
             <li>Copy issue key as link + summary</li>
@@ -46,7 +49,10 @@
             <li>Freeze issue summary</li>
         </ul>
 
-        <div class="mt-5 text-secondary" id="version"></div>
+        <h5 class="mb-3 mt-5">Versions details</h5>
+        <ul>
+            <li>v1.0.6: display preview while typing</li>
+        </ul>
     </div>
 
     <!-- Your custom script -->
