--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -56,6 +56,7 @@
     </div>
 
     <script src="/common/settings.js"></script>
+    <script src="/services/jiraService.js"></script>
     <script src="popup.js"></script>
 </body>
 
