- make the preview a link

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -36,8 +36,8 @@
                             <div class="text-muted hint">
                                 Ctrl+Enter to open on active tab
                             </div>
-                            <div id="preview" class="mt-4">
-
+                            <div class="mt-4">
+                                <a href="#" target="_blank" id="preview"></a>
                             </div>
                         </form>
                     </div>
