- fix preview link display

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -33,13 +33,13 @@
                                     id="issue" autofocus>
                                 <button class="btn btn-primary" type="submit" id="goButton">Go</button>
                             </div>
-                            <div class="text-muted hint">
-                                Ctrl+Enter to open on active tab
-                            </div>
-                            <div class="mt-4">
-                                <a href="#" target="_blank" id="preview"></a>
-                            </div>
                         </form>
+                        <div class="text-muted hint">
+                            Ctrl+Enter to open on active tab
+                        </div>
+                        <div class="preview-container mt-4">
+                            <a href="#" target="_blank" id="preview"></a>
+                        </div>
                     </div>
                 </div>
             </div>
