- show preview error differently

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -38,7 +38,8 @@
                             Ctrl+Enter to open on active tab
                         </div>
                         <div class="preview-container mt-4">
-                            <a href="#" target="_blank" id="preview"></a>
+                            <span id="preview-error" class="preview-error"></span>
+                            <a href="#" target="_blank" id="preview-link"></a>
                         </div>
                     </div>
                 </div>
@@ -46,7 +47,7 @@
         </main>
 
         <footer class="text-secondary">
-            <div class="container mt-3">
+            <div class="container">
                 <small class="text-muted">Default project: <span id="default_project_key"></span></small>
                 <hr class="mt-2 mb-2">
                 <span class="info-link" id="go-to-options">Options</span>
