--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -9,7 +9,38 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Additional custom styles -->
     <style>
-        /* Add custom styles here */
+        a {
+            display: inline-block;
+            text-decoration: none;
+            color: #3498db;
+            /* Base color for the link */
+            border-bottom: 2px solid transparent;
+            transition: all 0.3s ease;
+        }
+
+        a:hover {
+            color: #2c3e50;
+            /* Darker color on hover */
+            border-bottom: 2px solid #3498db;
+            /* Underline on hover */
+            transform: translateY(-2px);
+            /* Slight lift effect on hover */
+        }
+
+        a:active {
+            color: #2980b9;
+            /* Slightly different color on active click */
+            transform: translateY(0);
+            /* Return to original position */
+        }
+
+        a:focus {
+            outline: none;
+            border-bottom: 2px solid #e74c3c;
+            /* Different color for focus state */
+            box-shadow: 0 0 10px rgba(231, 76, 60, 0.5);
+            /* Glow effect on focus */
+        }
     </style>
 </head>
 
@@ -38,11 +69,15 @@
             <div class="form-text text-muted col-auto" id="status"></div>
         </div>
 
-        <div class="mt-5 text-secondary" id="version"></div>
+        <div class="d-flex justify-content-between align-items-center mt-5 text-secondary">
+            <div class="text-secondary" id="version"></div>
+            <a href="https://tbener.github.io/jira-extension/">Installation Instructions</a>
+        </div>
 
-        <hr class="mb-5"/>
+        <hr />
 
-        <h3 class="mb-3">Features</h3>
+
+        <h3 class="mb-3 mt-3">Features</h3>
         <ul>
             <li>Copy issue key as link + summary</li>
             <li>Popup for quick navigation</li>
