- find and activate extensions tab if exists (add tabs permission) - add designed New Version notification

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -12,11 +12,11 @@
     <div class="wrapper">
         <header class="mt-3">
             <div class="container">
-                <div class="row">
-                    <div class="col-auto">
-                        <img src="/images/icon-32.png" style="max-width: 50px;">
+                <div class="row align-items-center">
+                    <div class="col-1 me-2">
+                        <img src="/images/icon-32.png">
                     </div>
-                    <div class="col">
+                    <div class="col-auto">
                         <h1 class="d-inline-block"> Jira Issue Navigator</h1>
                     </div>
                 </div>
@@ -53,8 +53,8 @@
                 <span class="info-link" id="go-to-options">Options</span>
                 <span class="float-end">
                     <small id="version"></small>
-                    <span class="version-update-button" id="update">(update)</span>
                 </span>
+                <span class="update-notification" id="update">New version exists</span>
             </div>
         </footer>
     </div>
