- add version check to options page + on demand check - change notification display to bootstrap alert

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -54,7 +54,7 @@
                 <span class="float-end">
                     <small id="version"></small>
                 </span>
-                <span class="update-notification" id="update">New version exists</span>
+                <div class="alert alert-warning update-notification py-2 mt-2" id="update" role="alert"></div>
             </div>
         </footer>
     </div>
