--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -13,33 +13,27 @@
             display: inline-block;
             text-decoration: none;
             color: #3498db;
-            /* Base color for the link */
-            border-bottom: 2px solid transparent;
-            transition: all 0.3s ease;
         }
 
         a:hover {
-            color: #2c3e50;
-            /* Darker color on hover */
-            border-bottom: 2px solid #3498db;
-            /* Underline on hover */
-            transform: translateY(-2px);
-            /* Slight lift effect on hover */
+            text-decoration: underline;
         }
 
-        a:active {
-            color: #2980b9;
-            /* Slightly different color on active click */
-            transform: translateY(0);
-            /* Return to original position */
+
+        .update-notification {
+            display: none;
+            font-size: 14px;
+            font-weight: bold;
+            color: #f39c12;
+            background-color: #fff8e1;
+            border: 1px solid #f57c00;
+            transition: background-color 0.3s ease, color 0.3s ease;
         }
 
-        a:focus {
-            outline: none;
-            border-bottom: 2px solid #e74c3c;
-            /* Different color for focus state */
-            box-shadow: 0 0 10px rgba(231, 76, 60, 0.5);
-            /* Glow effect on focus */
+        .update-notification:hover {
+            background-color: #fff3cb;
+            text-decoration: underline;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -70,8 +64,18 @@
         </div>
 
         <div class="d-flex justify-content-between align-items-center mt-5 text-secondary">
-            <div class="text-secondary" id="version"></div>
+            <span>
+                <span class="text-secondary" id="version"></span>
+                <button type="button" id="checkUpdateButton" class="btn btn-sm btn-outline-primary ms-3">Check for
+                    updates</button>
+            </span>
             <a href="https://tbener.github.io/jira-extension/">Installation Instructions</a>
+        </div>
+
+        <div class="mt-3">
+            <div class="alert alert-warning update-notification py-2" id="update" role="alert"></div>
+            <div class="alert alert-success update-not-required py-2" role="alert">You're up to date. <a href="#"
+                    class="alert-link" id="download-update">Download zip</a></div>
         </div>
 
         <hr />
@@ -94,6 +98,7 @@
 
     <!-- Your custom script -->
     <script src="/common/settings.js"></script>
+    <script src="/services/version-service.js"></script>
     <script src="options.js"></script>
 </body>
 
