(bugfix) no observer assigned when disconnecting - v1.0.10

--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -90,6 +90,7 @@
 
         <h5 class="mb-3 mt-5">Versions details</h5>
         <ul>
+            <li>v1.0.10: (bugfix) error when disconnected observer</li>
             <li>v1.0.9: (feature) added version update assistant</li>
             <li>v1.0.7: (bugfix) copy link not always correct</li>
             <li>v1.0.6: (feature) display preview while typing</li>
