--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -10,11 +10,11 @@
 
 <body>
     <div class="wrapper">
-        <header class="mt-3">
+        <header class="p-3">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-1 me-2">
-                        <img src="/images/icon-32.png">
+                    <div class="col-1 ps-0">
+                        <img class="icon" src="/images/icon-32.png">
                     </div>
                     <div class="col-auto">
                         <h1 class="d-inline-block"> Jira Issue Navigator</h1>
@@ -31,7 +31,7 @@
                             <div class="input-group">
                                 <input type="text" class="form-control" placeholder="Enter issue number or ID"
                                     id="issue" autofocus>
-                                <button class="btn btn-primary" type="submit" id="goButton">Go</button>
+                                <button class="btn btn-primary go-button" type="submit" id="goButton">Go</button>
                             </div>
                         </form>
                         <div class="text-muted hint">
