trying to convert to ts... far from the end!

--- a/src/pages/options/options.html
+++ b/src/pages/options/options.html
@@ -99,9 +99,9 @@
     </div>
 
     <!-- Your custom script -->
-    <script src="/common/settings.js"></script>
-    <script src="/services/version-service.js"></script>
-    <script src="options.js"></script>
+    <script src="/src/commonmmon/settings.js"></script>
+    <script src="/src/servicesices/version-service.js"></script>
+    <script src="options.ts"></script>
 </body>
 
 </html>
