--- a/src/pages/popup/popup.html
+++ b/src/pages/popup/popup.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-1 ps-0">
-                        <img class="icon" src="/images/icon-32.png">
+                        <img class="icon" src="/src/images/icon-32.png">
                     </div>
                     <div class="col-auto">
                         <h1 class="d-inline-block"> Jira Issue Navigator</h1>
@@ -59,10 +59,10 @@
         </footer>
     </div>
 
-    <script src="/common/settings.js"></script>
-    <script src="/services/jiraService.js"></script>
-    <script src="/services/version-service.js"></script>
-    <script src="popup.js"></script>
+    <script src="/src/commonmmon/settings.js"></script>
+    <script src="/src/servicesices/jiraService.js"></script>
+    <script src="/src/servicesices/version-service.js"></script>
+    <script src="popup.ts"></script>
 </body>
 
 </html>
