--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -48,7 +48,7 @@
 
         <footer class="text-secondary">
             <div class="container">
-                <small class="text-muted">Default project: <span id="default_project_key"></span></small>
+                <small class="text-muted">Default project: <a href="#" target="_blank" id="link-to-project" title="Open board"></a></small>
                 <hr class="mt-2 mb-2">
                 <span class="info-link" id="go-to-options">Options</span>
                 <span class="float-end">
