--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -105,6 +105,7 @@
 
     <h5 class="mb-3 mt-5">Versions details</h5>
     <ul>
+        <li>v1.0.13: (feature) added link to board</li>
         <li>v1.0.12: UI</li>
         <li>v1.0.11: (bugfix) link didn't show when navigating straight to a page with popup</li>
         <li>v1.0.10: (bugfix) error when disconnected observer</li>
