--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -9,42 +9,40 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <header class="p-3">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-1 ps-0">
-                        <img class="icon" src="/images/icon-32.png">
-                    </div>
-                    <div class="col-auto">
-                        <h1 class="d-inline-block"> Jira Issue Navigator</h1>
-                    </div>
+<div class="wrapper">
+    <header class="p-3">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-1 ps-0">
+                    <img class="icon" src="/images/icon-32.png">
+                </div>
+                <div class="col-auto">
+                    <h1 class="d-inline-block"> Jira Issue Navigator</h1>
                 </div>
             </div>
-        </header>
+        </div>
+    </header>
 
-        <main class="flex-grow-1">
-            <div class="container">
-                <div class="row my-3">
-                    <div class="col">
-                        <form>
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Enter issue number or ID"
-                                    id="issue" autofocus>
-                                <button class="btn btn-primary go-button" type="submit" id="goButton">Go</button>
-                            </div>
-                        </form>
-                        <div class="text-muted hint">
-                            Ctrl+Enter to open on active tab
-                        </div>
-                        <div class="preview-container mt-4">
-                            <span id="preview-error" class="preview-error"></span>
-                            <a href="#" target="_blank" id="preview-link"></a>
-                        </div>
+    <main class="flex-grow-1">
+        <div class="container">
+            <div class="row my-3">
+                <div class="col">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Enter issue number or ID"
+                               id="issue" autofocus>
+                        <button class="btn btn-primary go-button" id="goButton">Go</button>
+                    </div>
+                    <div class="text-muted hint">
+                        Ctrl+Enter to open on active tab
+                    </div>
+                    <div class="preview-container mt-4">
+                        <span id="preview-error" class="preview-error"></span>
+                        <a href="#" target="_blank" id="preview-link"></a>
                     </div>
                 </div>
             </div>
-        </main>
+        </div>
+    </main>
 
         <footer class="text-secondary">
             <div class="container">
@@ -54,15 +52,16 @@
                 <span class="float-end">
                     <small id="version"></small>
                 </span>
-                <div class="alert alert-warning update-notification py-2 mt-2" id="update" role="alert"></div>
-            </div>
-        </footer>
-    </div>
+            <div class="alert alert-warning update-notification py-2 mt-2" id="update" role="alert"></div>
+        </div>
+    </footer>
+</div>
 
-    <script src="/common/settings.js"></script>
-    <script src="/services/jiraService.js"></script>
-    <script src="/services/version-service.js"></script>
-    <script src="popup.js"></script>
+<script src="/common/settings.js"></script>
+<script src="/services/jiraService.js"></script>
+<script src="/services/versionService.js"></script>
+<script type="module" src="/services/navigationService.js"></script>
+<script type="module" src="popup.js"></script>
 </body>
 
 </html>
