Added open tab issues to the list, combined with my issues. includes tab icon not arranged as a table. UI is not completed

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -46,6 +46,11 @@
                                 <div class="jira-issue">
                                     <span class="jira-key">Loading...</span>
                                     <span class="jira-summary"></span>
+                                    <span class="jira-tab-icon ms-2 me-2">
+                                        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#888" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                            <path d="M3 5h6l2 3h10a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2z"></path>
+                                        </svg>
+                                    </span>
                                     <span class="jira-status"></span>
                                 </div>
                                 <!--                                <div class="jira-issue jira-my-issue" onclick="window.open('https://jira.example.com/browse/PROJ-123', '_blank')">-->
