--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -132,7 +132,7 @@
 <script src="/common/settings.js"></script>
 <script src="/services/versionService.js"></script>
 <script src="/services/jiraService.js"></script>
-<script src="options.js"></script>
+<script src="options.js" type="module"></script>
 </body>
 
 </html>
