display issues in table

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -42,50 +42,21 @@
                     <div>
 
                         <div class="jira-popup">
-                            <table class="table table-sm jira-issues">
+                            <table class="table-sm jira-issues">
                                 <tbody>
                                     <tr class="jira-issue d-none">
-                                        <td class="jira-key">Loading...</td>
+                                        <td class="jira-key"></td>
                                         <td class="jira-summary"></td>
                                         <td class="jira-tab-icon">
                                             <svg class="tab-icon" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#888" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                                <path d="M3 5h6l2 3h10a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 1-2V7a2 2 0 0 1 2-2z"></path>
+                                                <path d="M3 5h6l2 3h10a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2z"></path>
                                             </svg>
                                         </td>
                                         <td class="jira-status"></td>
                                     </tr>
                                 </tbody>
                             </table>
-                            <div class="jira-issues">
-                                <div class="jira-issue">
-                                    <span class="jira-key">Loading...</span>
-                                    <span class="jira-summary"></span>
-                                    <span class="jira-tab-icon ms-2 me-2">
-                                        <svg class="tab-icon" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#888" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                            <path d="M3 5h6l2 3h10a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2z"></path>
-                                        </svg>
-                                    </span>
-                                    <span class="jira-status"></span>
-                                </div>
-                                <!--                                <div class="jira-issue jira-my-issue" onclick="window.open('https://jira.example.com/browse/PROJ-123', '_blank')">-->
-                                <!--                                    <span class="jira-key">PROJ-123</span>-->
-                                <!--                                    <span class="jira-summary">Fix login bug</span>-->
-                                <!--                                    <span class="jira-status">In Progress</span>-->
-                                <!--                                </div>-->
-                                <!--                                <div class="jira-issue jira-my-issue" onclick="window.open('https://jira.example.com/browse/PROJ-124', '_blank')">-->
-                                <!--                                    <span class="jira-key">PROJ-124</span>-->
-                                <!--                                    <span class="jira-summary">Improve dashboard UI</span>-->
-                                <!--                                    <span class="jira-status">Done</span>-->
-                                <!--                                </div>-->
-                                <!--                                <div class="jira-issue" onclick="window.open('https://jira.example.com/browse/PROJ-125', '_blank')">-->
-                                <!--                                    <span class="jira-key">PROJ-125</span>-->
-                                <!--                                    <span class="jira-summary">Update API documentation</span>-->
-                                <!--                                    <span class="jira-status">To Do</span>-->
-                                <!--                                </div>-->
-                            </div>
                         </div>
-
-
                     </div>
                 </div>
             </div>
