fix tooltips on issues list

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -47,7 +47,7 @@
                                     <tr class="jira-issue d-none">
                                         <td class="jira-key"></td>
                                         <td class="jira-summary"></td>
-                                        <td class="jira-tab-icon">
+                                        <td class="jira-tab-icon" title="This issue is already open in a tab. Click to activate.">
                                             <svg class="tab-icon" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#888" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                                 <path d="M3 5h6l2 3h10a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2z"></path>
                                             </svg>
