--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -4,87 +4,106 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="popup.scss">
 </head>
 
 <body>
-<div class="wrapper">
-    <header class="p-3">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-1 ps-0">
-                    <img class="icon" src="/images/icon-32.png">
-                </div>
-                <div class="col-auto">
-                    <h1 class="d-inline-block"> Jira Issue Navigator</h1>
+    <div class="wrapper">
+        <header class="p-3">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-1 ps-0">
+                        <img class="icon" src="/images/icon-32.png">
+                    </div>
+                    <div class="col-auto">
+                        <h1 class="d-inline-block"> Jira Issue Navigator</h1>
+                    </div>
                 </div>
             </div>
-        </div>
-    </header>
+        </header>
 
-    <main class="flex-grow-1">
-        <div class="container">
-            <div class="row my-3">
-                <div class="col">
-                    <div class="input-group">
+        <main class="flex-grow-1">
+            <div class="container">
+                <div class="row my-3">
+                    <div class="col">
+                        <div class="input-group">
                         <input type="text" class="form-control" placeholder="Enter issue number or ID"
                                id="issue" autofocus>
-                        <button class="btn btn-primary go-button" id="goButton">Go</button>
-                    </div>
-                    <div class="text-muted hint">
-                        Ctrl+Enter to open on active tab
-                    </div>
-                    <div class="preview-container mt-4">
-                        <span id="preview-error" class="preview-error"></span>
-                        <a href="#" target="_blank" id="preview-link"></a>
-                    </div>
-                    <div>
+                            <button class="btn btn-primary go-button" id="goButton">Go</button>
+                        </div>
+                        <div class="text-muted hint">
+                            Ctrl+Enter to open on active tab
+                        </div>
+                        <div class="preview-container mt-4">
+                            <span id="preview-error" class="preview-error"></span>
+                            <a href="#" target="_blank" id="preview-link"></a>
+                        </div>
+                        <div>
 
-                        <div class="jira-popup">
-                            <table class="table-sm jira-issues">
-                                <tbody>
-                                    <tr class="jira-issue d-none">
-                                        <td class="jira-key"></td>
-                                        <td class="jira-summary"></td>
-                                        <td class="jira-assignee">
-                                            <img src="" alt="" class="assignee-icon d-none">
-                                        </td>
+                            <div class="jira-popup">
+                                <!-- loading placeholders -->
+                                <table id="issues-table-placeholders" class="table-sm jira-issues placeholders">
+                                    <tbody>
+                                        <tr class="jira-issue placeholder-glow">
+                                            <td class="jira-key"><span class="placeholder"></span></td>
+                                            <td class="jira-summary"><span class="placeholder"></span></td>
+                                        </tr>
+                                        <tr class="jira-issue placeholder-glow">
+                                            <td class="jira-key"><span class="placeholder"></span></td>
+                                            <td class="jira-summary"><span class="placeholder"></span></td>
+                                        </tr>
+                                        <tr class="jira-issue placeholder-glow">
+                                            <td class="jira-key"><span class="placeholder"></span></td>
+                                            <td class="jira-summary"><span class="placeholder"></span></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+
+                                <table id="issues-table" class="table-sm jira-issues">
+                                    <tbody>
+                                        <!-- Template Row for Issues -->
+                                        <tr class="jira-issue d-none" data-template="true">
+                                            <td class="jira-key"></td>
+                                            <td class="jira-summary"></td>
+                                            <td class="jira-assignee">
+                                                <img src="" alt="" class="assignee-icon d-none">
+                                            </td>
                                         <td class="jira-tab-icon" title="This issue is already open in a tab. Click to activate.">
                                             <svg class="tab-icon" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#888" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                                 <path d="M3 5h6l2 3h10a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2z"></path>
-                                            </svg>
-                                        </td>
-                                        <td class="jira-status"></td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                                                </svg>
+                                            </td>
+                                            <td class="jira-status"></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </main>
+        </main>
 
-    <footer class="text-secondary">
-        <div class="container">
-            <small class="text-muted">Default project: <a href="#" target="_blank" id="link-to-project"
-                                                          title="Open board"></a></small>
-            <hr class="mt-2 mb-2">
-            <span class="info-link" id="go-to-options">Options</span>
-            <span class="float-end">
+        <footer class="text-secondary">
+            <div class="container">
+                <small class="text-muted">Default project: <a href="#" target="_blank" id="link-to-project"
+                        title="Open board"></a></small>
+                <hr class="mt-2 mb-2">
+                <span class="info-link" id="go-to-options">Options</span>
+                <span class="float-end">
                     <small id="version"></small>
                 </span>
-            <div class="alert alert-warning update-notification py-2 mt-2" id="update" role="alert"></div>
-        </div>
-    </footer>
-</div>
+                <div class="alert alert-warning update-notification py-2 mt-2" id="update" role="alert"></div>
+            </div>
+        </footer>
+    </div>
 
-<script src="/common/settings.js"></script>
-<script src="/services/jiraService.js"></script>
-<script src="/services/versionService.js"></script>
-<script type="module" src="/services/navigationService.js"></script>
-<script type="module" src="popup.js"></script>
+    <script src="/common/settings.js"></script>
+    <script src="/services/jiraService.js"></script>
+    <script src="/services/versionService.js"></script>
+    <script type="module" src="/services/navigationService.js"></script>
+    <script type="module" src="popup.js"></script>
 </body>
 
 </html>
