remove refs to settingsHandler

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -101,10 +101,8 @@
         </footer>
     </div>
 
-    <script src="/common/settings.js"></script>
-    <script src="/services/jiraService.js"></script>
+    <script src="/services/jiraService.js" type="module"></script>
     <script src="/services/versionService.js"></script>
-    <script type="module" src="/services/navigationService.js"></script>
     <script type="module" src="popup.js"></script>
 </body>
 
