--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -129,9 +129,9 @@
     </ul>
 </div>
 
-<script src="/common/settings.js"></script>
 <script src="/services/versionService.js"></script>
-<script src="/services/jiraService.js"></script>
+<script src="/services/settingsService.js" type="module"></script>
+<script src="/services/jiraService.js" type="module"></script>
 <script src="options.js" type="module"></script>
 </body>
 
