add showDueDateAlert to settings

--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -81,6 +81,15 @@
         </div>
     </div>
 
+    <div class="card p-3 mb-3">
+        <div class="form-check form-switch">
+            <input class="form-check-input" type="checkbox" id="showDueDateAlert" checked>
+            <label class="form-check-label" for="showDueDateAlert">
+                Show due date alert
+            </label>
+        </div>
+    </div>
+
     <div class="row mt-3 ms-1 align-items-baseline">
         <button type="button" id="saveButton" class="btn btn-primary col-auto">Save</button>
         <div class="form-text text-muted col-auto" id="status"></div>
