--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -125,6 +125,9 @@
 
     <h5 class="mb-3 mt-5">Versions details</h5>
     <ul>
+        <li>v1.3.0: (feature) added due date indication</li>
+    </ul>
+    <ul>
         <li>v1.2.0: (feature) added smart navigation</li>
     </ul>
     <ul>
